# pythonid-workshop

./: README.md  main.py  pyproject.toml
ai-integration/: .env.example  README.md
ai-integration/data/: meeting_notes.txt
ai-integration/src/: meeting_summarizer.py
api-development/: README.md
api-development/src/: auth.py  database.py  main.py  models.py
file-organization-automation/sample_files/: Document without extension  FILE WITH SPACES AND CAPS.TXT  INVOICE#123@2024!.xlsx  budget_2024_annual.xlsx  config_server_settings.txt  documents_archive_2024.rar  employee_list_2024.xlsx  file-with-dashes_and_underscores.txt  inventory_warehouse_data.xlsx  log_system_errors.txt  minutes_meeting_20240315.docx  notes_daily_tasks.txt  old_file_20241013_3.txt  old_file_20241013_7.txt  old_file_20241027_6.txt  old_file_20250126_9.txt  old_file_20250407_4.txt  old_file_20250413_2.txt  old_file_20250618_8.txt  old_file_20250619_5.txt  old_file_20250817_1.txt  old_file_20250829_10.txt  original_document.txt  podcast_episode_12.m4a  proposal_project_alpha.docx  readme_project_info.txt  recording_meeting_march15.mov  report    with    extra    spaces.docx  resume_john_doe.docx  sales_report_march.xlsx  template_letter_format.docx  tutorial_how_to_setup.avi  video_product_showcase.mkv
file-organization-automation/src/: create_sample_files.py  duplicate_file_detector.py  file_type_organizer.py
image-processing-api/: README.md
image-processing-api/src/: image_processor.py  main.py
sentiment-analysis/src/: sentiment_analyzer.py
web-scraping-automation/: README.md
(+1 files in other folders)
