[project]
name = "pythonid-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "jupyter>=1.1.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "send2trash>=1.8.3",
    "streamlit>=1.49.1",
    "textblob>=0.19.0",
    "uvicorn[standard]>=0.35.0",
    "watchdog>=6.0.0",
    "wordcloud>=1.9.4",
]

[tool.uv.workspace]
members = []
